채팅창 화면 구현

--- a/html/chat.html
+++ b/html/chat.html
@@ -38,7 +38,7 @@
         <main>
             <article class="chatting-list">
                 <section>
-                    <a href="/">
+                    <a href="./aliceChatting.html">
                         <div class="chat-box">
                             <div class="chat-img"></div>
                             <h2>
@@ -47,14 +47,14 @@
                             <p>
                                 오늘도 미라클 모닝 체크인 해야지?
                                 오늘도 미라클 모닝 체크인 해야지?
-                                오늘도 미라클 모···
+                                오늘도 미라클 모닝 체크인 해야지?
                             </p>
                             <time>오전 5:01</time>
                         </div>
                     </a>
                 </section>
                 <section>
-                    <a href="/">
+                    <a href="#">
                         <div class="chat-box">
                             <div class="chat-img"></div>
                             <h2>
@@ -79,13 +79,13 @@
                         <a class="navigation-icon" href="./chat.html"></a>
                     </li>
                     <li>
-                        <a class="navigation-icon" href="/"></a>
+                        <a class="navigation-icon" href="#"></a>
                     </li>
                     <li>
-                        <a class="navigation-icon" href="/"></a>
+                        <a class="navigation-icon" href="#"></a>
                     </li>
                     <li>
-                        <a class="navigation-icon" href="/"></a>
+                        <a class="navigation-icon" href="#"></a>
                     </li>
                 </ul>
             </aside>
