--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <article class="profile">
                 <section class="my-profile">
                     <a class="profile-img"></a>
-                    <a href="/">조지</a>
+                    <a href="#">조지</a>
                 </section>
                 <hr>
                 <div class="frend-profile">
@@ -72,13 +72,13 @@
                         <a class="navigation-icon" href="./html/chat.html"></a>
                     </li>
                     <li>
-                        <a class="navigation-icon" href="/"></a>
+                        <a class="navigation-icon" href="#"></a>
                     </li>
                     <li>
-                        <a class="navigation-icon" href="/"></a>
+                        <a class="navigation-icon" href="#"></a>
                     </li>
                     <li>
-                        <a class="navigation-icon" href="/"></a>
+                        <a class="navigation-icon" href="#"></a>
                     </li>
                 </ul>
             </aside>
