화면 크기가 모바일 사이즈 보다 클 경우 스크린 크기 줄여달라는 문구 출력

--- a/html/aliceChatting.html
+++ b/html/aliceChatting.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="../css/global.css">
         <link rel="stylesheet" href="../css/chattingHeader.css">
         <link rel="stylesheet" href="../css/aliceChatting.css">
+        <link rel="stylesheet" href="../css/oversize.css">
         <title>메가 톡</title>
     </head>
     <body>
@@ -81,5 +82,10 @@
                 </div>
             </section>
         </aside>
+
+        <div id="oversize">
+            <div class="logo-img"></div>
+            <p>스크린 크기를 줄여주세요</p>
+        </div>
     </body>
 </html>
