--- a/html/chat.html
+++ b/html/chat.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="../css/header.css">
         <link rel="stylesheet" href="../css/chat.css">
         <link rel="stylesheet" href="../css/navigation.css">
+        <link rel="stylesheet" href="../css/oversize.css">
         <title>메가 톡</title>
     </head>
     <body>
@@ -90,5 +91,10 @@
                 </ul>
             </aside>
         </nav>
+
+        <div id="oversize">
+            <div class="logo-img"></div>
+            <p>스크린 크기를 줄여주세요</p>
+        </div>
     </body>
 </html>
