--- a/html/aliceChatting.html
+++ b/html/aliceChatting.html
@@ -85,7 +85,7 @@
 
         <div id="oversize">
             <div class="logo-img"></div>
-            <p>스크린 크기를 줄여주세요</p>
+            <p>스크린 크기를 줄여주세요.</p>
         </div>
     </body>
 </html>
